[project]
name = "importphotos"
version = "1.1.0"
description = "Imports photos using file metadata."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow >= 10.3.0",
    "tabulate >= 0.9.0"
]

[[project.authors]]
name = "Thomas Southcott"
email = "contact@hotdog.studio"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://hotdog.studio"
github = "https://github.com/thomassouthcott/import-photos"

[project.scripts]
import_photos = "importphotos.main:main"

[tool.setuptools.package-data]
importphotos = ["*.ini"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--color=yes",
]